examples/error/invalid_regular_expression.rx
function void main() {
  regex rx = /*/; 
}